Refactoring RootResult